fix: y spacing

--- a/components/part/post/title.module.sass
+++ b/components/part/post/title.module.sass
@@ -3,8 +3,7 @@
   line-height: 3rem
   font-weight: 900
   width: 100%
-  padding-top: 4rem
-  padding-bottom: 3rem
+  margin: 6rem 0
   text-align: left
 
   @media screen and (min-width: 768px)
